disks/pc/dos/compaq/1.11/README.md
---
layout: page
title: COMPAQ MS-DOS 1.11
permalink: /disks/pc/dos/compaq/1.11/
machines:
  - type: pc
    id: ibm5150-compaq111
    config: /devices/pc/machine/5150/mda/64kb/machine.xml
    automount:
      A:
        path: /disks/pc/dos/compaq/1.11/COMPAQ-DOS111.json
---

COMPAQ MS-DOS 1.11
---

Released in 1983 by COMPAQ Computer Corp, this early version of MS-DOS displays the following messages on boot:

	The COMPAQ Personal Computer DOS
	Version 1.11
	
	(C) Copyright COMPAQ Computer Corp. 1982
	(C) Copyright Microsoft 1981, 82

A directory listing of the diskette is provided [below](#directory-of-compaq-ms-dos-111-diskette).

{% include machine.html id="ibm5150-compaq111" %}

### Directory of COMPAQ MS-DOS 1.11 Diskette

	 Volume in drive A has no label

	Directory of A:\

	IOSYS    COM      1998 05-13-83  12:00p
	MSDOS    COM      6136 05-13-83  12:00p
	COMMAND  COM      4959 05-13-83  12:00p
	LINK     EXE     41856 05-13-83  12:00p
	EDLIN    COM      2432 05-13-83  12:00p
	SYS      COM       645 05-13-83  12:00p
	DEBUG    COM      6619 05-13-83  12:00p
	BASIC    COM       549 05-13-83  12:00p
	BASICA   COM       547 05-13-83  12:00p
	FORMAT   COM      3296 05-13-83  12:00p
	EXE2BIN  EXE      1280 05-13-83  12:00p
	DISKCOPY COM      1812 05-13-83  12:00p
	DISKCOMP COM      1291 05-13-83  12:00p
	MODE     COM      1800 05-13-83  12:00p
	CHKDSK   COM      1720 05-13-83  12:00p
	COMP     COM      1484 05-13-83  12:00p
	WORDS             1242 05-13-83  12:00p
	BASICA   EXE     54272 05-13-83  12:00p
	TEST     EXE     18560 05-13-83  12:00p
	DEMO     BAT        14 05-13-83  12:00p
	DEMO     BAS      7808 05-13-83  12:00p
	DEMO1    BAS     17920 05-13-83  12:00p
	DEMO2    BAS     17792 05-13-83  12:00p
	DEMO3    BAS     21120 05-13-83  12:00p
	DEMO4    BAS      6528 05-13-83  12:00p
	JUGGLER  DAT     16128 05-13-83  12:00p
	USA      DAT     16128 05-13-83  12:00p
	INTEREST BAS       384 05-13-83  12:00p
	       28 file(s)     256320 bytes

	Total files listed:
	       28 file(s)     256320 bytes
	                       53248 bytes free

[Return to [COMPAQ MS-DOS Disks](/disks/pc/dos/compaq/)]
